# src/app.ts
@@ -1,4 +1,4 @@
-import express, { Request, Response } from "express";
+import express, { NextFunction, Request, Response } from "express";
 import dotenv from "dotenv";
 import cors from "cors";
 import * as OpenApiValidator from "express-openapi-validator";
@@ -6,7 +6,8 @@ import swaggerUi from "swagger-ui-express";
 import YAML from "yamljs";
 
 //Import the routers
-import userRouter from "./routers/user.routers";
+import userRouter from "./routers/user.router";
+import signatureRouter from "./routers/signature.router";
 
 //Debug
 import { debugMiddleware } from "./middlewares/debug.middleware";
@@ -36,12 +37,14 @@ app.use(
 app.use(debugMiddleware);
 
 // API routers
-app.use("/users", userRouter);
+app.use("/user", userRouter);
+app.use("/signatures", signatureRouter);
 
 // OpenApi validator
 app.use(openApiValidatorMiddleware);
 
-app.use((err: AppError, req: Request, res: Response) => {
+// eslint-disable-next-line @typescript-eslint/no-unused-vars
+app.use((err: AppError, req: Request, res: Response, next: NextFunction) => {
   // format error
   res.status(err.status || 500).json({
     message: err.message,
