# src/types/signature.ts
@@ -1,0 +1,5 @@
+export type SignatureCreateBody = {
+  userId: string;
+  body: string;
+  isActive: boolean;
+};
